argocd/applications/restate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restate
  labels:
    app: restate
    app.kubernetes.io/name: restate
    app.kubernetes.io/version: "1.7.9"
spec:
  type: ClusterIP
  selector:
    app: restate
  ports:
    - name: admin
      port: 9070
      targetPort: admin
    - name: ingress
      port: 8080
      targetPort: ingress
    - name: node
      port: 5122
      targetPort: node
